--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.techprimers.elastic</groupId>
-    <artifactId>spring-elastic-demo</artifactId>
+    <groupId>com.phpdaddy.udc</groupId>
+    <artifactId>udc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-elastic-demo</name>
-    <description>Demo project for Spring Boot</description>
+    <name>udc</name>
+    <description>UDC</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
