--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/udc
-spring.datasource.username=postgres
-spring.datasource.password=barsoft
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.data.elasticsearch.core=DEBUG
 server.port=8001
+
+spring.jackson.serialization.indent_output=true
